Wed Oct 30 16:17:30 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added shared library complation support.

Tue Oct 29 21:48:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added lib/silcutil/silcapputil.[ch] for application
	  utility functions.  It includes routines for applications'
	  convenience.  Added silc_create_key_pair, silc_show_public_key
	  and silc_load_key_pair functions.

Tue Oct 29 17:36:44 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Send RESUME_CLIENT packet from router to backup routers
	  to in resuming.  Affected file silcd/packet_receive.c.

Mon Oct 28 21:23:39 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* In IDENTIFY command parsing, send all other IDs except
	  Client IDs explicitly to router for resolving on normal
	  server.  Also check that ID received in WHOIS command is
	  always Client ID, others are not allowed.  Affected file
	  silcd/server_query.c.

	* Merged latest changes from irssi.org CVS.

Sun Oct 27 11:44:32 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Merged c0ffee's /set heartbeat patch to Irssi SILC client.
	  Affected files irssi/src/silc/core/silc-core, silc-server.c.

	* Fixed the heartbeat sending in Irssi SILC client.  Moved
	  the silc_client_packet_send to silcclient.h for application
	  usage.  Affected files lib/silcclient/client_internal.h
	  lib/silcclient/silcclient.h.

	* Fixed a bug in query resolving in server.  Used wrong 
	  variable in a for loop and crashed.  Affected file is
	  silcd/server_query.c.

	* Server constructs requested attributes only to locally
	  connected clients.  Affected file silcd/server_query.c.
	  Bug #36.

	* Fixed a bug when sending resolving from router to server
	  with requested attributes.  The constructed WHOIS command
	  was incorrect.  Affected file silcd/server_query.c.
	  Bug #38.

	* Fixed Requested Attributes saving in WHOIS command reply.
	  The length of the data buffer must be saved too.  Affected
	  file silcd/command_reply.c.
